[package]
name = "rust-tcp-vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
cty = "0.2.2"
filedesc = "0.6.3"
tokio = {version="1.36.0", features = ["macros", "fs", "io-util", "net", "rt", "rt-multi-thread", "signal"]}

[build-dependencies]
cc = "1.0"
